# career_copilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: REQUIRE_CHECKS_BEFORE_MERGE.md
configs/: config.example.env
mcp_server/: Dockerfile  requirements.txt  server.py
scripts/: explore_embeddings.py  init_db.py  repair_descriptions.py  run_ingestion.py  run_rag_index.py  run_web.py  scheduler.py
sql/: 001_create_jobs.sql  002_create_user_jobs.sql  003_pgvector.sql  004_jobs_embedding_queue.sql  005_job_description_chunks.sql  006_user_resume_ai_skills.sql
templates/: add_job.html  confirm_job.html  improve_resume.html  job_detail.html  market_analysis.html  prepare_interview.html  profile.html  recommendations.html  sign_in_required.html  track_applications.html
tests/: conftest.py  test_add_job_agent.py  test_add_job_router.py  test_chunk_text.py  test_database_jobs.py  test_database_profiles.py  test_embedding_schema_contract.py  test_ingestion_common.py  test_interview_preparation.py  test_job_document.py  test_market_analysis_router.py  test_market_analysis_service_cache.py  test_ml_recommendation_ranking.py  test_ml_training_mlflow.py  test_my_jobs_router.py  test_ranking_metrics.py  test_recommendations_router.py  test_resume_formatter.py  test_resume_improvement_agent.py  test_resume_pdf.py  test_schemas.py  test_skill_extraction.py  test_track_applications_memory.py  test_user_embedding.py  test_utils.py  test_web_app.py
(+96 files in other folders)
